<resources>
    <string name="app_name">Eye Contact</string>
    <string name="big_1">EyE Contact는 시각 장애인을 위한</string>
    <string name="big_2">전방 장애물 알림 어플리케이션입니다.</string>
    <string name="small_1">어플 실행 버튼을 누르시면 자동으로</string>
    <string name="small_2">화면 동영상이 재생이 되면서</string>
    <string name="small_3">전방에 놓여 있는 장애물들과 사라진 장애물들에</string>
    <string name="small_4">대해 음성으로 알려줍니다.</string>
    <string name="small_5">어플 실행 버튼을 누르셨다면</string>
    <string name="small_6">휴대폰 화면을 가슴 쪽으로 놓은 뒤</string>
    <string name="small_7">보조장치에 휴대폰을 넣습니다.</string>
    <string name="small2_1">화장실을 가시거나 잠시 어플을 멈추고 싶은 경우</string>
    <string name="small2_2">홀드 버튼을 눌러 어플을 일시정지합니다.</string>
    <string name="small2_3">다시 어플을 사용하고 싶은 경우 홀드 버튼을</string>
    <string name="small2_4">눌러 화면을 켜시면 바로 사용하실 수 있습니다.</string>
    <string name="title_activity_loading">loading</string>
</resources>